<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!--Vertical Guidelines-->
    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!--Horizontal Guidelines-->
    <android.support.constraint.Guideline
        android:id="@+id/guidelineHorizontal05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHorizontal35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHorizontal95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/btn_memoryClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/memoryClear"
        app:layout_constraintBottom_toBottomOf="@+id/btn_addToMemory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_addToMemory" />

    <Button
        android:id="@+id/btn_addToMemory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/addToMemory"
        app:layout_constraintBottom_toBottomOf="@+id/btn_subtractFromMemory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_subtractFromMemory" />

    <Button
        android:id="@+id/btn_subtractFromMemory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/subtractFromMemory"
        app:layout_constraintBottom_toTopOf="@+id/btn_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal35" />

    <Button
        android:id="@+id/btn_recallMemory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/recallMemory"
        app:layout_constraintBottom_toBottomOf="@+id/btn_subtractFromMemory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_subtractFromMemory" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/btn_toggleSign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_toggleSign" />

    <Button
        android:id="@+id/btn_toggleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/toggleSign"
        app:layout_constraintBottom_toBottomOf="@+id/btn_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_divide" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_multiplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/multiplication"
        app:layout_constraintBottom_toBottomOf="@+id/btn_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_divide" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_eight" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_nine" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/btn_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_nine" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/four"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_five" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@+id/btn_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_six" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_six" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_two" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_three" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/btn_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_dot" />

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal95"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_three" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:gravity="right|top"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal05"
        app:layout_constraintVertical_bias="0.5"
        tools:text="TextView" />

</android.support.constraint.ConstraintLayout>